setup: fix back button alignment on android translucent status bar

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -98,6 +98,10 @@ ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, .tab-item.activat
     padding-top: 5px !important;
 }
 
+.platform-android5 .back-button, .platform-android6 .back-button {
+    padding-top: 0px !important;
+}
+
 /*** Hide Tabs when Keyboard is open ***/
 .keyboard-open .tabs{
     display:none;
@@ -113,7 +117,6 @@ ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, .tab-item.activat
 }
 
 /*** Style for our special Checkboxes ***/
-
 .smallCheckbox {
     padding-top: 0px;
     padding-bottom: 0px;
